<resources>
    <string name="app_name">FBForm</string>

    <string name="login">Login</string>
    <string name="Login">string</string>
    <string name="Form">Login</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="signout">SignOut</string>
    <string name="default_web_client_id">973956268391-cst48e1ot45095ckk5on7ncmbsojbipr.apps.googleusercontent.com</string>
    <string name="sign_with_google">Sign With Google</string>
</resources>