<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp"
    tools:context=".Login">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/avartar" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Form"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:layout_margin="30dp"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        />
</com.google.android.material.textfield.TextInputLayout>
    <ProgressBar

        android:layout_width="match_parent"
        android:id="@+id/prograssbar"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/btnlogin"
        android:text="@string/login"

        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_margin="25dp"

        android:background="@drawable/shadow_background">


        <ImageButton
            android:id="@+id/btngoogle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/google_logo"
            android:background="@null"
            android:scaleType="fitCenter" />

    </FrameLayout>


    <TextView
        android:id="@+id/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:fontFamily="sans-serif"
        android:text="@string/click_to_register"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>