<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp"
    tools:context=".registration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/avartar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:layout_margin="30dp"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar

        android:layout_width="match_parent"
        android:id="@+id/prograssbar"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/btnregister"
        android:text="@string/Register"

        />
    <TextView
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/click_to_login"
        android:layout_width="match_parent"
        android:text="@string/click_to_login"
        android:layout_height="wrap_content"
        />


</LinearLayout>